# TaimakoAI

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MOBILE_PROMPT.md  Makefile  README.md  content_templates.md  cspell.json  docker-compose.yml  emergent_ventures_application.md  emergent_ventures_proposal.md  sample_products.csv  security_incident_report.md  taimako_customer_onboarding.md  taimako_golive_checklist.md  whatsapp_polls.md  whatsapp_roadmap.md
backend/: .env.example  Dockerfile.prod  SUBSCRIPTION_PLAN.md  TESTING.md  check_business.py  check_tx.py  drop_chat_session.py  populate_plans.py  pyproject.toml  reindex_vectors.py  reset_password.py  reset_vector_db.py  start.sh  test_agent_refactor.py  test_analysis_integration.py  test_email.py  test_output.txt  test_paystack_enable.py  test_paystack_factory.py  update_tiers.py  verify_fix_startup.py  verify_subscription.py
backend/alembic/: env.py
backend/alembic/versions/: 266444da8a8b_add_is_admin_to_users.py  2ca6c95dd95b_added_is_active_column.py  2e4c06d6829c_add_escalation_model.py  35c884792568_add_is_lead_to_guest_users.py  538ca2f1a3cf_create_plan_table.py  70d75bc52042_transactions_table.py  8837e83d7599_add_payment_transactions_table.py  a1b2c3d4e5f6_add_subscription_management_fields.py  a7b8c9d0e1f2_drop_gemini_api_key_column.py  (+13 more)
backend/app/: main copy.py  main.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  factories.py  test_api.py  test_api_scoped.py  test_automated_analysis.py  test_business.py  test_escalation_unit.py  test_rag_scoped.py
(+243 files in other folders)
